폰트 수정, 미세 오류 수정 (2021.04.09)

--- a/starbucks-practice/css/main.css
+++ b/starbucks-practice/css/main.css
@@ -121,7 +121,7 @@ header .sub-menu {
   display: flex;
 }
 header .sub-menu ul.menu {
-  font-family: Arial, sans-serif;
+  font-family: Nunito, Arial, sans-serif;
   display: flex;
 }
 header .sub-menu ul.menu li {
@@ -189,12 +189,9 @@ header .main-menu {
   z-index: 1;
   display: flex;
 }
-header .main-menu .item {
-
-}
 header .main-menu .item .item__name {
   padding: 10px 20px 34px 20px;
-  font-family: Arial, sans-serif;
+  font-family: Nunito, Arial, sans-serif;
   font-size: 13px;
 }
 header .main-menu .item:hover .item__name {
@@ -310,9 +307,6 @@ header .badges .badge {
 }
 
 /* NOTICE */
-.notice {
-
-}
 .notice .notice-line {
   position: relative;
 }
@@ -595,9 +589,6 @@ header .badges .badge {
 }
 .season-product .text-group .description {
   margin-bottom: 15px;
-}
-.season-product .text-group .more {
-
 }
 
 /* RESERVE COFFEE */
